--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -9,4 +9,10 @@ jobs:
     name: Greeting
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            node-
       - run: npm install -D node-sass
