--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -9,6 +9,7 @@ jobs:
     name: Greeting
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - uses: actions/cache@v2
         with:
           path: ~/.npm
