--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -16,4 +16,5 @@ jobs:
           key: node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             node-
+      - run: npx node-sass --help
       - run: npm install
