--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -16,4 +16,12 @@ jobs:
           key: node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             node-
-      - run: npm install
+      - name: FTP-Deploy-Action
+        uses: SamKirkland/FTP-Deploy-Action@3.1.1
+        with:
+          ftp-server: ${{ secrets.FTP_SERVER }}
+          ftp-username: ${{ secrets.FTP_USERNAME }}
+          ftp-password: ${{ secrets.FTP_PASSWORD }}
+          local-dir: public
+          git-ftp-args: --remote-root ${{ secrets.FTP_REMOTE_PATH }}
+          
