--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -16,7 +16,5 @@ jobs:
           key: node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             node-
-      - name: install lftp
-        run: "sudo apt-get install lftp"
-      - name: mirror
-        run: "lftp -u ${{ secrets.FTP_USERNAME }},${{ secrets.FTP_PASSWORD }} -e \"mirror --reverse public ${{ secrets.FTP_REMOTE_PATH}};exit\" ${{ secrets.FTP_SERVER }}"
+      - name: git ftp push
+        run: "git ftp push -u hysryt -p ${{ secrets.FTP_PASSWORD }} --syncroot public -v ftp://hysryt.sakura.ne.jp/www/laravel"
