--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -10,11 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            node-
+      # - uses: actions/cache@v2
+      #   with:
+      #     path: ~/.npm
+      #     key: node-${{ hashFiles('**/package-lock.json') }}
+      #     restore-keys: |
+      #       node-
       - name: git ftp push
-        run: "git ftp push -u hysryt -p ${{ secrets.FTP_PASSWORD }} --force --syncroot public -v ftp://hysryt.sakura.ne.jp/www/laravel"
+        run: "git ftp push -u ${{ secrets.FTP_USERNAME }} -p ${{ secrets.FTP_PASSWORD }} --force --syncroot public -v ftp://${{ secrets.FTP_SERVER }}${{ secrets.FTP_REMOTE_PATH }}"
